<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/etCarSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/car_seats"
        android:textSize="@dimen/text_dimens"/>
    <EditText
        android:id="@+id/etCarPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/car_price"
        android:textSize="@dimen/text_dimens"/>
    <EditText
        android:id="@+id/etCarStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/car_status"
        android:textSize="@dimen/text_dimens"/>
    <EditText
        android:id="@+id/etCarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/car_model"
        android:textSize="@dimen/text_dimens"/>
    <EditText
        android:id="@+id/etCarDateReleased"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/car_date_released"
        android:textSize="@dimen/text_dimens"/>
    <EditText
        android:id="@+id/etCarCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/car_categories"
        android:textSize="@dimen/text_dimens"/>
</LinearLayout>